Updated home page

--- a/home.html
+++ b/home.html
@@ -7,9 +7,47 @@
 </head>
 <body>
     <h1>Welcome to the Internet</h1>
-    <p>The Internet is a vast network that connects millions of private, public, academic, business, and government networks.</p>
-    <p>It enables communication and access to information across the globe.</p>
-    <p>Explore the web to learn more about various topics, connect with others, and share your ideas.</p>
+    <strong><p><i>This article is about the worldwide computer network. For the global system of pages accessed through URLs via the Internet, see World Wide Web.</i></p><p><i> For other uses, see Internet (disambiguation).</i></p>
+<p><i>"The Internet" redirects here. For the American music group, see The Internet (band).
+"Interweb" redirects here. For the song by Poppy, see Interweb (song).</i></p></strong>
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6e/Data_Networks_classification_by_spatial_scope.svg/330px-Data_Networks_classification_by_spatial_scope.svg.png" alt="Data Networks classification by spatial scope" style="width: 330px; height: 220px;">
+    <p>The Internet is the global system of interconnected computer networks that use the Internet protocol suite (TCP/IP) to link devices worldwide. It is a network of networks that consists of millions of private, public, academic, business, and government networks, ranging from local to global scope, which are linked by a broad array of electronic, wireless, and optical networking technologies.</p>
+    <p>The Internet carries a vast range of information resources and services, such as the internet access, the World Wide Web (WWW), email, telephony, and peer-to-peer networks. It provides a platform for communication and collaboration, enabling users to share information and resources across the globe.</p>
+    <p>As a global system, the Internet has revolutionized communication, commerce, and entertainment, making it an integral part of modern life. It has transformed how people interact, conduct business, and access information, leading to the development of new technologies and services that continue to shape society.</p>
+    <h2>History</h2>
+    <p>The history of the Internet dates back to the 1960s when the United States Department of Defense developed ARPANET, a network that connected various research institutions. Over the years, the network evolved, and by the 1980s, it had expanded to include universities and research centers worldwide.</p>
+    <p>In the 1990s, the introduction of the World Wide Web made the Internet more accessible to the general public, leading to a rapid increase in users and the development of commercial services. The Internet has since continued to grow, with advancements in technology and infrastructure enabling faster and more reliable connections.</p>
+    <h2>Impact</h2>
+    <p>The impact of the Internet on society has been profound. It has changed how people communicate, access information, and conduct business. Social media platforms have transformed personal interactions, while e-commerce has revolutionized shopping and business transactions.</p>
+    <p>Moreover, the Internet has facilitated the globalization of information and culture, allowing people to connect and share ideas across borders. It has also played a crucial role in education, providing access to vast resources and enabling online learning opportunities.</p>
+    <h2>Challenges</h2>
+    <p>Despite its many benefits, the Internet also presents challenges. Issues such as cybersecurity threats, privacy concerns, and the digital divide highlight the need for ongoing efforts to ensure a safe and equitable online environment. Additionally, the spread of misinformation and the impact of social media on public discourse are significant challenges that require attention.</p>
+    <h2>Conclusion</h2>
+    <p>In conclusion, the Internet is a transformative force that has reshaped the world in countless ways. Its ability to connect people and facilitate the exchange of information has made it an essential tool for modern life. As technology continues to evolve, the Internet will likely play an even more significant role in shaping the future of communication, commerce, and culture.</p>
+    <h2>Further Reading</h2>
+    <ul>
+        <li><a href="https://en.wikipedia.org/wiki/History_of_the_Internet">History of the Internet</a></li>
+        <li><a href="https://en.wikipedia.org/wiki/Impact_of_the_Internet">Impact of the Internet</a></li>
+        <li><a href="https://en.wikipedia.org/wiki/Challenges_of_the_Internet">Challenges of the Internet</a></li>
+        <li><a href="https://en.wikipedia.org/wiki/Internet">Internet</a></li>
+    </ul>
+    <h2>References</h2>
+    <ul>
+        <li><a href="https://www.internetsociety.org/">Internet Society</a></li>
+        <li><a href="https://www.icann.org/">ICANN</a></li>
+        <li><a href="https://www.w3.org/">World Wide Web Consortium (W3C)</a></li>
+        <li><a href="https://www.ietf.org/">Internet Engineering Task Force (IETF)</a></li>
+    </ul>
+    <h2>Related Topics</h2>
+    <ul>
+        <li><a href="https://en.wikipedia.org/wiki/World_Wide_Web">World Wide Web</a></li>
+        <li><a href="https://en.wikipedia.org/wiki/Email">Email</a></li>
+        <li><a href="https://en.wikipedia.org/wiki/Social_media">Social Media</a></li>
+        <li><a href="https://en.wikipedia.org/wiki/E-commerce">E-commerce</a></li>
+        <li><a href="https://en.wikipedia.org/wiki/Cybersecurity">Cybersecurity</a></li>
+    </ul>
+    <h2>Contact</h2>
+    <p>If you have any questions or comments about this article, feel free to reach out via email at <a href="mailto:niharika@gmail.com"></a></p>   
     <footer>
         <p>&copy; 2023 Internet Information</p>
     </footer>
